results/SVCOMP/4-shot/log-ExSymExe20-2024_03_18_19_04_17.txt
class Main {
  static int field;
  static int field2;

  //@ ensures \result ==> field == 9;
  //@ ensures \result ==> (\forall Main inst; inst != null; inst.test(3, field, field2));
  public static boolean main() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires x == 3;
  //@ requires z == field;
  //@ requires r == field2;
  //@ ensures \result ==> (z == x + field) && (x == field - 3) && (field == field2);
  //@ ensures \result ==> (z >= x ==> System.out.println("branch FOO1")) && (z < x ==> System.out.println("branch FOO2")) && (x >= field ==> !System.out.println("branch BOO2"));
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe20");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z >= x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= r) {
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field == 9;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> (\forall Main inst; inst != null; inst.test(3, field, field2));
                                                                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> (\forall Main inst; inst != null; inst.test(3, field, field2));
                                                                                ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:15: error: An identifier with package visibility may not be used in a requires clause with public visibility
  //@ requires z == field;
                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:16: error: An identifier with package visibility may not be used in a requires clause with public visibility
  //@ requires r == field2;
                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:17: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> (z == x + field) && (x == field - 3) && (field == field2);
                                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:17: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> (z == x + field) && (x == field - 3) && (field == field2);
                                                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:17: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> (z == x + field) && (x == field - 3) && (field == field2);
                                                                   ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:17: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> (z == x + field) && (x == field - 3) && (field == field2);
                                                                            ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:18: error: incompatible types: void cannot be converted to boolean
  //@ ensures \result ==> (z >= x ==> System.out.println("branch FOO1")) && (z < x ==> System.out.println("branch FOO2")) && (x >= field ==> !System.out.println("branch BOO2"));
                                                        ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:18: error: incompatible types: void cannot be converted to boolean
  //@ ensures \result ==> (z >= x ==> System.out.println("branch FOO1")) && (z < x ==> System.out.println("branch FOO2")) && (x >= field ==> !System.out.println("branch BOO2"));
                                                                                                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:18: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> (z >= x ==> System.out.println("branch FOO1")) && (z < x ==> System.out.println("branch FOO2")) && (x >= field ==> !System.out.println("branch BOO2"));
                                                                                                                                   ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:18: error: 'void' type not allowed here
  //@ ensures \result ==> (z >= x ==> System.out.println("branch FOO1")) && (z < x ==> System.out.println("branch FOO2")) && (x >= field ==> !System.out.println("branch BOO2"));
                                                                                                                                                                ^
13 errors

